@@ -39,10 +39,9 @@ import sun.net.ResourceManager;
  * not implement any security checks.
  * Note this class should <b>NOT</b> be public.
  *
- * @author  Steven B. Byrne
+ * @author Steven B. Byrne
  */
-abstract class AbstractPlainSocketImpl extends SocketImpl
-{
+abstract class AbstractPlainSocketImpl extends SocketImpl {
     /* instance variable for SO_TIMEOUT */
     int timeout;   // timeout in millisec
     // traffic class
@@ -70,8 +69,8 @@ abstract class AbstractPlainSocketImpl extends SocketImpl
     private int resetState;
     private final Object resetLock = new Object();
 
-   /* whether this Socket is a stream (TCP) socket or not (UDP)
-    */
+    /* whether this Socket is a stream (TCP) socket or not (UDP)
+     */
     protected boolean stream;
 
     /**
@@ -79,12 +78,12 @@ abstract class AbstractPlainSocketImpl extends SocketImpl
      */
     static {
         java.security.AccessController.doPrivileged(
-            new java.security.PrivilegedAction<Void>() {
-                public Void run() {
-                    System.loadLibrary("net");
-                    return null;
-                }
-            });
+                new java.security.PrivilegedAction<Void>() {
+                    public Void run() {
+                        System.loadLibrary("net");
+                        return null;
+                    }
+                });
     }
 
     /**
@@ -117,12 +116,12 @@ abstract class AbstractPlainSocketImpl extends SocketImpl
     /**
      * Creates a socket and connects it to the specified port on
      * the specified host.
+     *
      * @param host the specified host
      * @param port the specified port
      */
     protected void connect(String host, int port)
-        throws UnknownHostException, IOException
-    {
+            throws UnknownHostException, IOException {
         boolean connected = false;
         try {
             InetAddress address = InetAddress.getByName(host);
@@ -146,8 +145,9 @@ abstract class AbstractPlainSocketImpl extends SocketImpl
     /**
      * Creates a socket and connects it to the specified address on
      * the specified port.
+     *
      * @param address the address
-     * @param port the specified port
+     * @param port    the specified port
      */
     protected void connect(InetAddress address, int port) throws IOException {
         this.port = port;
@@ -166,11 +166,12 @@ abstract class AbstractPlainSocketImpl extends SocketImpl
     /**
      * Creates a socket and connects it to the specified address on
      * the specified port.
+     *
      * @param address the address
      * @param timeout the timeout value in milliseconds, or zero for no timeout.
-     * @throws IOException if connection fails
-     * @throws  IllegalArgumentException if address is null or is a
-     *          SocketAddress subclass not supported by this socket
+     * @throws IOException              if connection fails
+     * @throws IllegalArgumentException if address is null or is a
+     *                                  SocketAddress subclass not supported by this socket
      * @since 1.4
      */
     protected void connect(SocketAddress address, int timeout)
@@ -217,63 +218,64 @@ abstract class AbstractPlainSocketImpl extends SocketImpl
              * fail, since only java.Socket* has access to
              * PlainSocketImpl.setOption().
              */
-        case SO_LINGER:
-            if (val == null || (!(val instanceof Integer) && !(val instanceof Boolean)))
-                throw new SocketException("Bad parameter for option");
-            if (val instanceof Boolean) {
-                /* true only if disabling - enabling should be Integer */
-                on = false;
-            }
-            break;
-        case SO_TIMEOUT:
-            if (val == null || (!(val instanceof Integer)))
-                throw new SocketException("Bad parameter for SO_TIMEOUT");
-            int tmp = ((Integer) val).intValue();
-            if (tmp < 0)
-                throw new IllegalArgumentException("timeout < 0");
-            timeout = tmp;
-            break;
-        case IP_TOS:
-             if (val == null || !(val instanceof Integer)) {
-                 throw new SocketException("bad argument for IP_TOS");
-             }
-             trafficClass = ((Integer)val).intValue();
-             break;
-        case SO_BINDADDR:
-            throw new SocketException("Cannot re-bind socket");
-        case TCP_NODELAY:
-            if (val == null || !(val instanceof Boolean))
-                throw new SocketException("bad parameter for TCP_NODELAY");
-            on = ((Boolean)val).booleanValue();
-            break;
-        case SO_SNDBUF:
-        case SO_RCVBUF:
-            if (val == null || !(val instanceof Integer) ||
-                !(((Integer)val).intValue() > 0)) {
-                throw new SocketException("bad parameter for SO_SNDBUF " +
-                                          "or SO_RCVBUF");
-            }
-            break;
-        case SO_KEEPALIVE:
-            if (val == null || !(val instanceof Boolean))
-                throw new SocketException("bad parameter for SO_KEEPALIVE");
-            on = ((Boolean)val).booleanValue();
-            break;
-        case SO_OOBINLINE:
-            if (val == null || !(val instanceof Boolean))
-                throw new SocketException("bad parameter for SO_OOBINLINE");
-            on = ((Boolean)val).booleanValue();
-            break;
-        case SO_REUSEADDR:
-            if (val == null || !(val instanceof Boolean))
-                throw new SocketException("bad parameter for SO_REUSEADDR");
-            on = ((Boolean)val).booleanValue();
-            break;
-        default:
-            throw new SocketException("unrecognized TCP option: " + opt);
+            case SO_LINGER:
+                if (val == null || (!(val instanceof Integer) && !(val instanceof Boolean)))
+                    throw new SocketException("Bad parameter for option");
+                if (val instanceof Boolean) {
+                    /* true only if disabling - enabling should be Integer */
+                    on = false;
+                }
+                break;
+            case SO_TIMEOUT:
+                if (val == null || (!(val instanceof Integer)))
+                    throw new SocketException("Bad parameter for SO_TIMEOUT");
+                int tmp = ((Integer) val).intValue();
+                if (tmp < 0)
+                    throw new IllegalArgumentException("timeout < 0");
+                timeout = tmp;
+                break;
+            case IP_TOS:
+                if (val == null || !(val instanceof Integer)) {
+                    throw new SocketException("bad argument for IP_TOS");
+                }
+                trafficClass = ((Integer) val).intValue();
+                break;
+            case SO_BINDADDR:
+                throw new SocketException("Cannot re-bind socket");
+            case TCP_NODELAY:
+                if (val == null || !(val instanceof Boolean))
+                    throw new SocketException("bad parameter for TCP_NODELAY");
+                on = ((Boolean) val).booleanValue();
+                break;
+            case SO_SNDBUF:
+            case SO_RCVBUF:
+                if (val == null || !(val instanceof Integer) ||
+                        !(((Integer) val).intValue() > 0)) {
+                    throw new SocketException("bad parameter for SO_SNDBUF " +
+                            "or SO_RCVBUF");
+                }
+                break;
+            case SO_KEEPALIVE:
+                if (val == null || !(val instanceof Boolean))
+                    throw new SocketException("bad parameter for SO_KEEPALIVE");
+                on = ((Boolean) val).booleanValue();
+                break;
+            case SO_OOBINLINE:
+                if (val == null || !(val instanceof Boolean))
+                    throw new SocketException("bad parameter for SO_OOBINLINE");
+                on = ((Boolean) val).booleanValue();
+                break;
+            case SO_REUSEADDR:
+                if (val == null || !(val instanceof Boolean))
+                    throw new SocketException("bad parameter for SO_REUSEADDR");
+                on = ((Boolean) val).booleanValue();
+                break;
+            default:
+                throw new SocketException("unrecognized TCP option: " + opt);
         }
         socketSetOption(opt, on, val);
     }
+
     public Object getOption(int opt) throws SocketException {
         if (isClosedOrPending()) {
             throw new SocketException("Socket Closed");
@@ -291,39 +293,39 @@ abstract class AbstractPlainSocketImpl extends SocketImpl
          */
 
         switch (opt) {
-        case TCP_NODELAY:
-            ret = socketGetOption(opt, null);
-            return Boolean.valueOf(ret != -1);
-        case SO_OOBINLINE:
-            ret = socketGetOption(opt, null);
-            return Boolean.valueOf(ret != -1);
-        case SO_LINGER:
-            ret = socketGetOption(opt, null);
-            return (ret == -1) ? Boolean.FALSE: (Object)(new Integer(ret));
-        case SO_REUSEADDR:
-            ret = socketGetOption(opt, null);
-            return Boolean.valueOf(ret != -1);
-        case SO_BINDADDR:
-            InetAddressContainer in = new InetAddressContainer();
-            ret = socketGetOption(opt, in);
-            return in.addr;
-        case SO_SNDBUF:
-        case SO_RCVBUF:
-            ret = socketGetOption(opt, null);
-            return new Integer(ret);
-        case IP_TOS:
-            ret = socketGetOption(opt, null);
-            if (ret == -1) { // ipv6 tos
-                return new Integer(trafficClass);
-            } else {
+            case TCP_NODELAY:
+                ret = socketGetOption(opt, null);
+                return Boolean.valueOf(ret != -1);
+            case SO_OOBINLINE:
+                ret = socketGetOption(opt, null);
+                return Boolean.valueOf(ret != -1);
+            case SO_LINGER:
+                ret = socketGetOption(opt, null);
+                return (ret == -1) ? Boolean.FALSE : (Object) (new Integer(ret));
+            case SO_REUSEADDR:
+                ret = socketGetOption(opt, null);
+                return Boolean.valueOf(ret != -1);
+            case SO_BINDADDR:
+                InetAddressContainer in = new InetAddressContainer();
+                ret = socketGetOption(opt, in);
+                return in.addr;
+            case SO_SNDBUF:
+            case SO_RCVBUF:
+                ret = socketGetOption(opt, null);
                 return new Integer(ret);
-            }
-        case SO_KEEPALIVE:
-            ret = socketGetOption(opt, null);
-            return Boolean.valueOf(ret != -1);
-        // should never get here
-        default:
-            return null;
+            case IP_TOS:
+                ret = socketGetOption(opt, null);
+                if (ret == -1) { // ipv6 tos
+                    return new Integer(trafficClass);
+                } else {
+                    return new Integer(ret);
+                }
+            case SO_KEEPALIVE:
+                ret = socketGetOption(opt, null);
+                return Boolean.valueOf(ret != -1);
+            // should never get here
+            default:
+                return null;
         }
     }
 
@@ -346,7 +348,7 @@ abstract class AbstractPlainSocketImpl extends SocketImpl
                 /* socket may have been closed during poll/select */
                 synchronized (fdLock) {
                     if (closePending) {
-                        throw new SocketException ("Socket closed");
+                        throw new SocketException("Socket closed");
                     }
                 }
                 // If we have a ref. to the Socket, then sets the flags
@@ -368,13 +370,13 @@ abstract class AbstractPlainSocketImpl extends SocketImpl
 
     /**
      * Binds the socket to the specified address of the specified local port.
+     *
      * @param address the address
-     * @param lport the port
+     * @param lport   the port
      */
     protected synchronized void bind(InetAddress address, int lport)
-        throws IOException
-    {
-       synchronized (fdLock) {
+            throws IOException {
+        synchronized (fdLock) {
             if (!closePending && (socket == null || !socket.isBound())) {
                 NetHooks.beforeTcpBind(fd, address, lport);
             }
@@ -388,6 +390,7 @@ abstract class AbstractPlainSocketImpl extends SocketImpl
 
     /**
      * Listens, for a specified amount of time, for connections.
+     *
      * @param count the amount of time to listen for connections
      */
     protected synchronized void listen(int count) throws IOException {
@@ -396,6 +399,7 @@ abstract class AbstractPlainSocketImpl extends SocketImpl
 
     /**
      * Accepts connections.
+     *
      * @param s the connection
      */
     protected void accept(SocketImpl s) throws IOException {
@@ -503,7 +507,7 @@ abstract class AbstractPlainSocketImpl extends SocketImpl
      * Closes the socket.
      */
     protected void close() throws IOException {
-        synchronized(fdLock) {
+        synchronized (fdLock) {
             if (fd != null) {
                 if (!stream) {
                     ResourceManager.afterUdpClose();
@@ -558,34 +562,34 @@ abstract class AbstractPlainSocketImpl extends SocketImpl
      * Shutdown read-half of the socket connection;
      */
     protected void shutdownInput() throws IOException {
-      if (fd != null) {
-          socketShutdown(SHUT_RD);
-          if (socketInputStream != null) {
-              socketInputStream.setEOF(true);
-          }
-          shut_rd = true;
-      }
+        if (fd != null) {
+            socketShutdown(SHUT_RD);
+            if (socketInputStream != null) {
+                socketInputStream.setEOF(true);
+            }
+            shut_rd = true;
+        }
     }
 
     /**
      * Shutdown write-half of the socket connection;
      */
     protected void shutdownOutput() throws IOException {
-      if (fd != null) {
-          socketShutdown(SHUT_WR);
-          shut_wr = true;
-      }
+        if (fd != null) {
+            socketShutdown(SHUT_WR);
+            shut_wr = true;
+        }
     }
 
-    protected boolean supportsUrgentData () {
+    protected boolean supportsUrgentData() {
         return true;
     }
 
-    protected void sendUrgentData (int data) throws IOException {
+    protected void sendUrgentData(int data) throws IOException {
         if (fd == null) {
             throw new IOException("Socket Closed");
         }
-        socketSendUrgentData (data);
+        socketSendUrgentData(data);
     }
 
     /**
@@ -696,25 +700,35 @@ abstract class AbstractPlainSocketImpl extends SocketImpl
     }
 
     abstract void socketCreate(boolean isServer) throws IOException;
+
     abstract void socketConnect(InetAddress address, int port, int timeout)
-        throws IOException;
+            throws IOException;
+
     abstract void socketBind(InetAddress address, int port)
-        throws IOException;
+            throws IOException;
+
     abstract void socketListen(int count)
-        throws IOException;
+            throws IOException;
+
     abstract void socketAccept(SocketImpl s)
-        throws IOException;
+            throws IOException;
+
     abstract int socketAvailable()
-        throws IOException;
+            throws IOException;
+
     abstract void socketClose0(boolean useDeferredClose)
-        throws IOException;
+            throws IOException;
+
     abstract void socketShutdown(int howto)
-        throws IOException;
+            throws IOException;
+
     abstract void socketSetOption(int cmd, boolean on, Object value)
-        throws SocketException;
+            throws SocketException;
+
     abstract int socketGetOption(int opt, Object iaContainerObj) throws SocketException;
+
     abstract void socketSendUrgentData(int data)
-        throws IOException;
+            throws IOException;
 
     public final static int SHUT_RD = 0;
     public final static int SHUT_WR = 1;
